# hypr-overview

./: CMakeLists.txt  README.md  hyprpm.toml
examples/: hypr-overview.conf  hypr-overview.lua
src/: main.cpp
